[package]
name = "pkg_name"
version = "0.1.0"
authors = ["Lance Finfrock <lancewf@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
mysql = "16.1.0"
config = "0.13.1"
toml = { version = "0.5", optional = true }
serde = "1.0"
serde_derive = "1.0"
